fixed spacing

--- a/website/src/components/nav/style.css
+++ b/website/src/components/nav/style.css
@@ -19,7 +19,7 @@
     display: flex;
     justify-content:space-evenly;
   }
-  a {
+  li > a {
     color: black;
     text-decoration: none;
     font-weight: 400;
